# econ-atlas

./: .env.example  .gitignore  README.md  README_CN.md  list.csv  mypy.ini  nber_sample.html  pyproject.toml  script.py
docs/parser_profiles/: cambridge.md  chicago.md  informs.md  nber.md  oxford.md  sciencedirect.md  wiley.md
docs/reports/: 2025-11-17-project-status.md
launchd/: com.icarus603.econatlas.crawl.plist.template  com.icarus603.econatlas.viewer.plist.template  install.sh  uninstall.sh
manual_crawlers/: .env.example  README.md  __init__.py  run.py  sources.py
openspec/: project.md
openspec/changes/add-manual-cookie-crawlers/: proposal.md  tasks.md
openspec/changes/add-sciencedirect-fallback-parser/: proposal.md  tasks.md
openspec/changes/break-sciencedirect/: design.md  (+2 more)
src/econ_atlas/: __init__.py  __main__.py  cli.py  config.py  models.py  runner.py
src/econatlas/: __init__.py  __main__.py  _loader.py  crawlers.py  feeds.py  samples.py  storage.py  translation.py
src/ingest/: feed.py
src/source_profiling/: browser_env.py
src/translate/: base.py
tests/: test_cli_publisher.py  test_cli_samples.py  test_cnki_crawler.py  test_cnki_link_normalization.py  test_config.py  test_feed_client.py  test_journal_list_loader.py  test_list_loader.py  test_manual_crawlers_cli.py  test_oxford_enricher.py  test_parser_profile_docs.py  test_runner_sciencedirect.py  test_sample_collector.py  test_sample_inventory.py  test_sciencedirect_enricher.py  test_sciencedirect_parser.py  test_storage.py  test_translation.py
viewer/: app.js  index.html  styles.css
(+82 files in other folders)
